--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"start": "node app.js",
-		"dev": "nodemon app.js",
+		"start": "cross-env NODE_ENV=prod PORT=8080 node app.js",
+		"dev": "cross-env NODE_ENV=dev PORT=3000 nodemon app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -27,6 +27,10 @@
 		"fs": "^0.0.1-security",
 		"highlight.js": "^11.11.1",
 		"marked": "^15.0.7",
+		"nodemon": "^3.1.9",
 		"path": "^0.12.7"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3"
 	}
 }
